<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="240dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/act_details_top_banner">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ImageView
                    android:src="@drawable/img_background"
                    android:scaleType="fitXY"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/act_details_background"/>
            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/act_details_photo"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginBottom="8dp"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/colorAccent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/act_details_name"/>
            <TextView
                    android:id="@+id/act_details_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textSize="36sp"
                    android:textColor="@color/mainPrimaryText"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/act_details_photo"
                    app:layout_constraintBottom_toBottomOf="@+id/act_details_background"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/act_details_top_banner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    >
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/act_details_real_name_holder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/act_details_real_name"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:textColor="@color/mainSecondaryText"
            />
            <TextView
                    android:id="@+id/act_details_real_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:textAllCaps="true"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"/>
            <TextView
                    android:id="@+id/act_details_height_holder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/act_details_height"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:textColor="@color/mainSecondaryText"
            />
            <TextView
                    android:id="@+id/act_details_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:textAllCaps="true"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"/>
            <TextView
                    android:id="@+id/act_details_power_holder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/act_details_power"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:textColor="@color/mainSecondaryText"
            />
            <TextView
                    android:id="@+id/act_details_power"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:textAllCaps="true"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"/>
            <TextView
                    android:id="@+id/act_details_abilities_holder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/act_details_abilities"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:textColor="@color/mainSecondaryText"
            />
            <TextView
                    android:id="@+id/act_details_abilities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:textAllCaps="true"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"/>
            <TextView
                    android:id="@+id/act_details_groups_holder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/act_details_groups"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:textColor="@color/mainSecondaryText"
            />
            <TextView
                    android:id="@+id/act_details_groups"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>